# FCA-SubscaleModel-Sim

./: README.md  control.ino  reader.py  subscale.world
LiftDragPlugin/: CMakeLists.txt  LiftDragPlugin.cc
SubscaleGUIPlugin/: SubscaleGUIPlugin.cc  SubscaleGUIPlugin.hh  SubscalePlugin.cc  state.txt
SubscaleGUIPlugin/msgs/: CMakeLists.txt  subscale.proto
SubscalePlugin/: CMakeLists.txt  SubscalePlugin.cc
stls/: Fuselage (1).stl  Fuselage 1.stl  Fuselage 2.stl  Left Aileron.stl  Left Elevator.stl  Left Wing.stl  Right Aileron.stl  Right Elevator.stl  Right Wing.stl  Rudder.stl  Stabalizers.stl  Subscale Fuselage.stl
subscaleGUIPlugin/: SubscaleGUIPlugin.cc  SubscalePlugin.hh
subscale_model/: model.config  model.sdf
